--- a/ApiGateway/appsettings.json
+++ b/ApiGateway/appsettings.json
@@ -19,7 +19,7 @@
 
     "Integrations": {
         "RecaApi": {
-            "BaseUrl": "https://reca.azurewebsites.net"
+            "BaseUrl": "http://aureacuenrest.runasp.net/"
         }
     },
     
