Quitar azure y poner mi rest

--- a/ApiGateway/appsettings.Production.json
+++ b/ApiGateway/appsettings.Production.json
@@ -15,7 +15,7 @@
   },
   "Integrations": {
     "RecaApi": {
-      "BaseUrl": "https://reca.azurewebsites.net"
+      "BaseUrl": "http://aureacuenrest.runasp.net/"
     }
   },
   "ReverseProxy": {
