Agregar para manejar los grpc internamente para reservas

--- a/ApiGateway/appsettings.json
+++ b/ApiGateway/appsettings.json
@@ -6,23 +6,21 @@
             "Yarp": "Information"
         }
     },
-
     "AllowedHosts": "*",
-
     "Jwt": {
         "Key": "HotelMicroservicesSecretKey2024!@#$%^&*()_+",
         "Issuer": "HotelMicroservices",
         "Audience": "HotelMicroservicesClients",
         "ExpireMinutes": 60
     },
-
-
     "Integrations": {
         "RecaApi": {
             "BaseUrl": "http://aureacuenrest.runasp.net/"
         }
     },
-    
+    "GrpcServices": {
+        "ReservasService": "https://reservas-service.onrender.com"
+    },
     "ReverseProxy": {
         "Routes": {
             "catalogos-route": {
@@ -31,44 +29,47 @@
                     "Path": "/api/catalogos/{**catch-all}"
                 },
                 "Transforms": [
-                    { "PathRemovePrefix": "/api/catalogos" },
-                    { "PathPrefix": "/api" }
+                    {
+                        "PathRemovePrefix": "/api/catalogos"
+                    },
+                    {
+                        "PathPrefix": "/api"
+                    }
                 ]
             },
-
             "habitaciones-route": {
                 "ClusterId": "habitaciones-cluster",
                 "Match": {
                     "Path": "/graphql/{**catch-all}"
                 }
             },
-
             "habitaciones-ui-route": {
                 "ClusterId": "habitaciones-cluster",
                 "Match": {
                     "Path": "/graphql-ui/{**catch-all}"
                 }
             },
-
             "reservas-route": {
                 "ClusterId": "reservas-cluster",
                 "Match": {
                     "Path": "/grpc/{**catch-all}"
                 }
             },
-
             "usuarios-pagos-route": {
                 "ClusterId": "usuarios-pagos-cluster",
                 "Match": {
                     "Path": "/api/usuarios-pagos/{**catch-all}"
                 },
                 "Transforms": [
-                    { "PathRemovePrefix": "/api/usuarios-pagos" },
-                    { "PathPrefix": "/api" }
+                    {
+                        "PathRemovePrefix": "/api/usuarios-pagos"
+                    },
+                    {
+                        "PathPrefix": "/api"
+                    }
                 ]
             }
         },
-
         "Clusters": {
             "catalogos-cluster": {
                 "Destinations": {
@@ -77,7 +78,6 @@
                     }
                 }
             },
-
             "habitaciones-cluster": {
                 "Destinations": {
                     "habitaciones-service": {
@@ -85,7 +85,6 @@
                     }
                 }
             },
-
             "reservas-cluster": {
                 "Destinations": {
                     "reservas-service": {
@@ -93,7 +92,6 @@
                     }
                 }
             },
-
             "usuarios-pagos-cluster": {
                 "Destinations": {
                     "usuarios-pagos-service": {
