--- a/ApiGateway/ApiGateway.csproj
+++ b/ApiGateway/ApiGateway.csproj
@@ -12,8 +12,19 @@
 		<PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 		<PackageReference Include="Yarp.ReverseProxy" Version="2.1.0" />
+		<!-- gRPC Client -->
+		<PackageReference Include="Grpc.Net.Client" Version="2.59.0" />
+		<PackageReference Include="Google.Protobuf" Version="3.25.2" />
+		<PackageReference Include="Grpc.Tools" Version="2.60.0">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 	</ItemGroup>
 
+	<!-- Proto file for gRPC client -->
+	<ItemGroup>
+		<Protobuf Include="Protos\reservas.proto" GrpcServices="Client" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\Shared.Data\Shared.Data.csproj" />
@@ -22,3 +33,4 @@
 	</ItemGroup>
 
 </Project>
+
