--- a/ApiGateway/appsettings.Production.json
+++ b/ApiGateway/appsettings.Production.json
@@ -18,6 +18,9 @@
       "BaseUrl": "http://aureacuenrest.runasp.net/"
     }
   },
+  "GrpcServices": {
+    "ReservasService": "${RESERVAS_SERVICE_URL}"
+  },
   "ReverseProxy": {
     "Routes": {
       "catalogos-route": {
@@ -26,8 +29,12 @@
           "Path": "/api/catalogos/{**catch-all}"
         },
         "Transforms": [
-          { "PathRemovePrefix": "/api/catalogos" },
-          { "PathPrefix": "/api" }
+          {
+            "PathRemovePrefix": "/api/catalogos"
+          },
+          {
+            "PathPrefix": "/api"
+          }
         ]
       },
       "habitaciones-route": {
@@ -54,8 +61,12 @@
           "Path": "/api/usuarios-pagos/{**catch-all}"
         },
         "Transforms": [
-          { "PathRemovePrefix": "/api/usuarios-pagos" },
-          { "PathPrefix": "/api" }
+          {
+            "PathRemovePrefix": "/api/usuarios-pagos"
+          },
+          {
+            "PathPrefix": "/api"
+          }
         ]
       }
     },
