--- a/ApiGateway/appsettings.json
+++ b/ApiGateway/appsettings.json
@@ -15,7 +15,7 @@
     },
     "Integrations": {
         "RecaApi": {
-            "BaseUrl": "http://aureacuenrest.runasp.net/"
+            "BaseUrl": "http://restbrisamar.runasp.net/"
         }
     },
     "GrpcServices": {
