--- a/ApiGateway/appsettings.json
+++ b/ApiGateway/appsettings.json
@@ -19,7 +19,7 @@
         }
     },
     "GrpcServices": {
-        "ReservasService": "https://reservas-service.onrender.com"
+        "ReservasService": "https://brisamarreservasservice.onrender.com"
     },
     "ReverseProxy": {
         "Routes": {
