--- a/HabitacionesService/appsettings.Production.json
+++ b/HabitacionesService/appsettings.Production.json
@@ -6,9 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=db31651.public.databaseasp.net;Database=db31651;User Id=db31651;Password=prueba2020d;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection":"Server=db32030.public.databaseasp.net;Database=db32030;User Id=db32030;Password=3s%K-7Hxn_9E;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True;";
+
+    },
   "Jwt": {
     "Key": "${JWT_SECRET_KEY}",
     "Issuer": "HotelMicroservices",
