--- a/HabitacionesService/appsettings.Production.json
+++ b/HabitacionesService/appsettings.Production.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection":"Server=db32030.public.databaseasp.net;Database=db32030;User Id=db32030;Password=3s%K-7Hxn_9E;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True;";
+        "DefaultConnection":"Server=db32030.public.databaseasp.net;Database=db32030;User Id=db32030;Password=3s%K-7Hxn_9E;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
 
     },
   "Jwt": {
