--- a/ApiGateway/appsettings.json
+++ b/ApiGateway/appsettings.json
@@ -74,28 +74,28 @@
             "catalogos-cluster": {
                 "Destinations": {
                     "catalogos-service": {
-                        "Address": "http://localhost:5001"
+                        "Address": "http://brisamarcatalogosservice.onrender.com"
                     }
                 }
             },
             "habitaciones-cluster": {
                 "Destinations": {
                     "habitaciones-service": {
-                        "Address": "http://localhost:5002"
+                        "Address": "http://brisamarhabitacionesservice.onrender.com"
                     }
                 }
             },
             "reservas-cluster": {
                 "Destinations": {
                     "reservas-service": {
-                        "Address": "http://localhost:5003"
+                        "Address": "http://brisamarreservasservice.onrender.com"
                     }
                 }
             },
             "usuarios-pagos-cluster": {
                 "Destinations": {
                     "usuarios-pagos-service": {
-                        "Address": "http://localhost:5004"
+                        "Address": "http://brisamarpagosservice.onrender.com"
                     }
                 }
             }
