--- a/UsuariosPagosService/appsettings.json
+++ b/UsuariosPagosService/appsettings.json
@@ -12,7 +12,7 @@
     "Audience": "HotelMicroservicesClients",
     "ExpireMinutes": 60
   },
-  "GrpcServices": {
-    "ReservasService": "http://localhost:5003"
-  }
+    "GrpcServices": {
+        "ReservasService": "http://brisamarreservasservice.onrender.com"
+    }
 }
